fixed alignment of quiz and high scores

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 body {
     font-family: sans-serif;
     font-weight: bold;
-    /* text-align: center; */
+    text-align: center;
+}
+body ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+body ol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .starting-page h1 {
     color:rgb(65, 11, 79);
@@ -88,7 +98,3 @@ body a {
 .container {
     text-align: center;
 }
-
-/* #question-title {
-    text-align: center;
-} */
